#
# Copyright (c) 2014-2015 Los Alamos National Security, LLC
#                         All rights reserved.
#
# This FILE is part of the Gladius project. See the LICENSE.txt FILE at the
# top-level directory of this distribution.
#

ACLOCAL_AMFLAGS = -Im4

SUBDIRS = \
source

EXTRA_DIST = \
LICENSE.txt README.md RUN.md TODO.md THANKS HACK.md BUILD.md \
LT-VERSION-SCHEME.txt

AM_CFLAGS =

AM_CXXFLAGS =

AM_CPPFLAGS =
