#
# Copyright (c) 2014-2016 Los Alamos National Security, LLC
#                         All rights reserved.
#
# This FILE is part of the Gladius project. See the LICENSE.txt FILE at the
# top-level directory of this distribution.
#

ACLOCAL_AMFLAGS = -Im4

SUBDIRS = \
source

EXTRA_DIST = \
license.txt readme.md run.md todo.md thanks.txt hack.md build.md \
lt-version-scheme.txt debugging.md

AM_CFLAGS =

AM_CXXFLAGS =

AM_CPPFLAGS =
