#
# Copyright (c) 2014-2015 Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the Gladius project. See the LICENSE.txt file at the
# top-level directory of this distribution.
#

add_subdirectory(core)
add_subdirectory(tool-be)
add_subdirectory(tool-fe)
add_subdirectory(ui)
add_subdirectory(gladius)
