#
# Copyright (c) 2014-2015 Los Alamos National Security, LLC
#                         All rights reserved.
#
# This FILE is part of the Gladius project. See the LICENSE.txt FILE at the
# top-level directory of this distribution.
#

SUBDIRS = \
core \
dspa/core \
tool-common \
dmi \
lmon \
mrnet \
mrnet/filters \
tool-fe \
tool-be \
ui \
ui/term \
gladius \
dspa/hello \
dspa/pgdb \
dspa/grok
