#
# Copyright (c) 2014-2016 Los Alamos National Security, LLC
#                         All rights reserved.
#
# This FILE is part of the Gladius project. See the LICENSE.txt FILE at the
# top-level directory of this distribution.
#

SUBDIRS = \
core \
dspa/core \
tool-common \
mrnet \
mrnet/filters \
tool-be \
tool-fe \
ui \
ui/term \
gladius \
dspa/hello
