#
# Copyright (c) 2014-2016 Los Alamos National Security, LLC
#                         All rights reserved.
#
# This FILE is part of the Gladius project. See the LICENSE.txt FILE at the
# top-level directory of this distribution.
#

SUBDIRS = \
core \
plugin/core \
tool-common \
dsys \
dsys/mpi \
mrnet \
mrnet/filters \
tool-fe \
tool-be \
tool-api \
ui \
ui/term \
gladius \
plugin/hello
