#
# Copyright (c) 2014      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the Gladius project. See the LICENSE.txt file at the
# top-level directory of this distribution.
#

# The Gladius Debugger BackEnd library
add_library(
    GladiusDBE
    dbe.h dbe.cpp
)
include_directories(..)
