#
# Copyright (c) 2015      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the Gladius project. See the LICENSE.txt file at the
# top-level directory of this distribution.
#

lib_LTLIBRARIES = \
libevnts.la

include_HEADERS = \
evnts.h

libevnts_la_SOURCES = \
evnts.cpp evnts.h

libevnts_la_CFLAGS =

libevnts_la_CPPFLAGS = \
-I${top_srcdir}/source

libevnts_la_LDFLAGS = \
-module -avoid-version

libevnts_la_LIBADD =
